--- a/src/project.html
+++ b/src/project.html
@@ -63,6 +63,12 @@
             <p>Dashboard Time</p>
             <a href="https://danielchuaaa.github.io/time-tracking-dashboard-main/src/">View Details</a>
           </div>
+
+          <div class="projectCard hiddenText">
+            <img src="../assets/detik.png" alt="time" class="imgProject" />
+            <p>Landing Page</p>
+            <a href="https://danielchuaaa.github.io/assesmentDetik/src/">View Details</a>
+          </div>
         </div>
       </div>
     </section>
